# Chacha-poom

./: .env.example  .gitignore
.claude/: launch.json  settings.local.json
apps/backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py
apps/backend/src/: main.py  seed.py
apps/backend/src/core/: config.py  database.py  security.py
apps/backend/src/models/: __init__.py  admin.py  audit_log.py  config_template.py  inbound.py  node.py  node_metric.py  payment.py  plan.py  subscription.py  user.py  user_access.py  user_traffic.py
apps/backend/src/modules/auth/: dependencies.py  router.py  schemas.py  service.py
apps/backend/src/modules/client/: dependencies.py  router.py  schemas.py  service.py
apps/backend/src/modules/configs/: region_profiles.py  router.py  schemas.py  service.py
apps/backend/src/modules/inbounds/: router.py  schemas.py  service.py
apps/backend/src/modules/monitoring/: router.py  schemas.py  service.py
apps/backend/src/modules/nodes/: router.py  schemas.py  service.py
apps/backend/src/modules/payments/: router.py  schemas.py  service.py
apps/backend/src/modules/plans/: router.py  schemas.py  service.py
apps/backend/src/modules/stats/: router.py  schemas.py  service.py
apps/backend/src/modules/sublinks/: router.py  service.py
apps/backend/src/modules/users/: router.py  schemas.py  service.py
apps/backend/src/scripts/: create_superadmin.py
deploy/: Caddyfile  docker-compose.dev.yml  docker-compose.yml  install-node.sh  install.sh
(+64 files in other folders)
